2015-10-28  Uwe Schulzweida

	* using CDI library version 1.7.0
	* Version 1.7.0 released

2015-06-19  Uwe Schulzweida

        * for: added docu

2015-06-18  Uwe Schulzweida

	* Ydrunstat: don't set the year to the minimum of years found on output timestep
	* Ydaystat: set the year to the minimum of years found on output timestep

2015-06-17  Uwe Schulzweida

	* bug fix if table filename is a directory [Bug #5891]

2015-06-12  Uwe Schulzweida

	* diff: disable checkrel

2015-06-10  Karl-Hermann Wieners

	* expr: operators return 0 for arithmetics on constants [Bug #5875]

2015-06-03  Uwe Schulzweida

	* removed flag CMP_CODE
	* replace: compare only parameter name; removed check of parameter number
	* setpartabn: replace vlistDefVarCode() by vlistDefVarParam()

2015-06-01  Uwe Schulzweida

	* vertvar, vertstd: changed to weighted var/std if layer bounds are available

2015-05-29  Uwe Schulzweida

	* yseaspctl: check of verification date failed [Bug #5810]

2015-05-28  Uwe Schulzweida

	* Remap: fixed memory leak for r=max_remaps-1

2015-05-26  Uwe Schulzweida

	* New operator: vertstd1  - Vertical standard deviation [Divisor is (n-1)]
	* New operator: vertvar1  - Vertical variance [Divisor is (n-1)]
	* New operator: gridboxstd1 - Gridbox standard deviation [Divisor is (n-1)]
	* New operator: gridboxvar1 - Gridbox variance [Divisor is (n-1)]
	* New operator: merstd1  - Meridional standard deviation [Divisor is (n-1)]
	* New operator: mervar1  - Meridional variance [Divisor is (n-1)]
	* New operator: zonstd1  - Zonal standard deviation [Divisor is (n-1)]
	* New operator: zonvar1  - Zonal variance [Divisor is (n-1)]

2015-05-22  Uwe Schulzweida

	* New operator: yseasvar1  - Multi-year seasonally variance [Divisor is (n-1)]
	* New operator: yseasstd1  - Multi-year seasonally standard deviation [Divisor is (n-1)]
	* New operator: seasvar1  - Seasonal variance [Divisor is (n-1)]
	* New operator: seasstd1  - Seasonal standard deviation [Divisor is (n-1)]
