@@ -3,6 +3,10 @@
 	* using CDI library version 1.7.0
 	* Version 1.7.0 released
 
+2015-06-21  Uwe Schulzweida
+
+	* topo, temp, mask: added optional parameter for target grid
+
 2015-06-19  Uwe Schulzweida
 
         * for: added docu
